<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransaksiActivity">
    <TextView
        android:id="@+id/txtNomorMeja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Meja Nomor 1"/>
    <TextView
        android:id="@+id/textviewh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/harga"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNomorMeja" />

    <TextView
        android:id="@+id/txtHarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textviewh"
        app:layout_constraintTop_toBottomOf="@+id/txtNomorMeja"
        tools:text="Harga" />

    <TextView
        android:id="@+id/textviewt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tanggal"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewh" />

    <TextView
        android:id="@+id/datePicker"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border"
        android:textColor="@color/black"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/ic_baseline_arrow_drop_down_24"
        app:layout_constraintStart_toEndOf="@+id/textviewt"
        app:layout_constraintTop_toBottomOf="@+id/textviewh" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/nama_pemesan"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewt">

            <EditText
                android:id="@+id/editTextTextNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Nama Pemesan"
                android:backgroundTint="@color/white"
                android:inputType="textPersonName"
                android:lines="1"
                android:maxLines="1"
                android:text="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutTelepon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/nomor_telepon"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNama">
        <EditText
            android:id="@+id/editTextTextTelepon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Nomor Telepon"
            android:backgroundTint="@color/white"
            android:inputType="phone"
            android:lines="1"
            android:maxLines="1"
            android:text="" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutJumlah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/jumlah_orang"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTelepon">
        <EditText
            android:id="@+id/editTextTextJumlah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Jumlah Orang"
            android:backgroundTint="@color/white"
            android:inputType="number"
            android:lines="1"
            android:maxLines="1"
            android:text="" />
        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEditDeskripsi"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/keperluan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutJumlah">

        <EditText
            android:id="@+id/editTextTextKeperluan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Keperluan"
            android:backgroundTint="@color/white"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:text="" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnKirim"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/colorPrimary"
        android:text="@string/kirim"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditDeskripsi" />
</androidx.constraintlayout.widget.ConstraintLayout>